--- a/package.json
+++ b/package.json
@@ -43,5 +43,11 @@
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
+  },
+  "overrides": {
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.31",
+    "@babel/helpers": "^7.26.10",
+    "@babel/runtime": "^7.26.10"
   }
 }
